-0018-
switch argon2 pass hash from hardcoded into reading pass hash output to ensure user credential integrity
adding forget password system
adding a timer metric so i can watch how long my request is processed
